--- a/BlogWeb/appsettings.json
+++ b/BlogWeb/appsettings.json
@@ -2,11 +2,15 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=BlogWeb;Username=postgres;Password=1"
   },
+  "Admin": {
+    "Email": "admin@blogweb.ru",
+    "Password": "Admin123!"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
